@@ -1,6 +1,7 @@
 -- Version 2.17.2, released ...
 
  * The Eyedropper is now also available for selecting paints for the operations on the Global Operations screen
+ * Bug fix: the Flatten tool no longer allows you to initiate it outside the bounds of the world
 
 -- Version 2.17.1, released 13-5-2023
 
